--- a/polyrhythms-viewer.html
+++ b/polyrhythms-viewer.html
@@ -531,7 +531,7 @@
 	    return;
 	}
 
-	var fileIn = 'polyrhythms-'+nbobj+'objects_'+ratioR+'!'+ratioL+'.txt';
+	var fileIn = 'polyrythms-'+nbobj+'objects_'+ratioR+'!'+ratioL+'.txt';
 	readAndParseDBfile('db/'+fileIn);	
     }
 
