--- a/polyrhythms-viewer_duplex.html
+++ b/polyrhythms-viewer_duplex.html
@@ -663,7 +663,7 @@
 	    return;
 	}
 
-	var fileIn = 'polyrhythms-'+nbobj+'objects_mult2_'+ratioR+'!'+ratioL+'.txt';
+	var fileIn = 'polyrythms-'+nbobj+'objects_mult2_'+ratioR+'!'+ratioL+'.txt';
 	readAndParseDBfile('db_duplex/'+fileIn);	
     }
 
