Info on Factor Polyrythms handling

--- a/polyrhythms-viewer.html
+++ b/polyrhythms-viewer.html
@@ -127,6 +127,7 @@
       <li>Throws are only simplex here. If you are looking for duplex also go to <a href="polhyrythms-viewer_duplex.html" target="_blank">Here</a>.</li>
       <li>Height are in Hexadecimal and Max Height is f.</li>
       <li>Throws to exclude are separated by "<em>;</em>". It concerns not only heights: i.e you may declare 3x, 4x ...</li>
+      <li>Factor Polyrhythms are not simplified. I.E it means that Period of Polyrythms k:kM is computed here as k<sup>2</sup>M.   
     </ul>
   </p>
   
