--- a/polyrhythms-viewer_duplex.html
+++ b/polyrhythms-viewer_duplex.html
@@ -128,6 +128,7 @@
       <li>Some sheets are not available either because it was too big or it was too long to generate.</li>
       <li>Height are in Hexadecimal and Max Height is f.</li>
       <li>Throws to exclude are separated by "<em>;</em>". It concerns not only heights: i.e you may declare 3x, 4x ...</li>
+      <li>Factor Polyrhythms are not simplified. I.E it means that Period of Polyrythms k:kM is computed here as k<sup>2</sup>M.   
     </ul>
   </p>
   
