--- a/polyrhythms-viewer_MHN.html
+++ b/polyrhythms-viewer_MHN.html
@@ -1,5 +1,9 @@
 <HEAD>
   <TITLE>Polyrhythms Viewer MJN/MHN (v1.0)</TITLE>
+
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+  <meta content="utf-8" http-equiv="encoding"/>
+   
   <STYLE type="text/css">
     .table_header
     {padding-top:1px;
