--- a/polyrhythms-viewer_duplex.html
+++ b/polyrhythms-viewer_duplex.html
@@ -53,8 +53,7 @@
     var MINRATIOL = 1;
     var MAXRATIOR = 5;
     var MAXRATIOL = 5;
-    var URLHOST = '/data/juggling/tools/polyrhythms/';
-    
+    var URLHOST = '/data/juggling/tools/polyrhythms/';    
   </script>
 
 </HEAD>
@@ -124,7 +123,7 @@
   <span id="JML3"></span>
 
   <p>&nbsp;</p><p>Nb: <ul>
-      <li>Throws contain at least one duplex here. If you are looking for simplex only go to <a href="polyrhythms-viewer.html" target="_blank">Here</a>.</li>
+      <li>Throws contain at least one duplex here. If you are looking for simplexes only go <a href="polyrhythms-viewer.html" target="_blank">Here</a>.</li>
       <li>Some sheets are not available either because it was too big or it was too long to generate.</li>
       <li>Height are in Hexadecimal and Max Height is f.</li>
       <li>Throws to exclude are separated by "<em>;</em>". It concerns not only heights: i.e you may declare 3x, 4x ...</li>
