--- a/polyrhythms-viewer.html
+++ b/polyrhythms-viewer.html
@@ -53,10 +53,10 @@
     var MINRATIOL = 1;
     var MAXRATIOR = 5;
     var MAXRATIOL = 5;
-    var URLHOST = '/data/juggling/tools/polyrhythms/';
-    
+    var URLHOST = '/data/juggling/tools/polyrhythms/';   
   </script>
 
+  <!--<script type="text/javascript" src="/js/visualisation_siteswap.js"></script> -->
 
 </HEAD>
 
@@ -124,7 +124,7 @@
   <span id="JML3"></span>
 
   <p>&nbsp;</p><p>Nb: <ul>
-      <li>Throws are only simplex here. If you are looking for duplex also go to <a href="polhyrythms-viewer_duplex.html" target="_blank">Here</a>.</li>
+      <li>Throws are only simplexes here. If you are looking for Duplexes also go <a href="polyrhythms-viewer_duplex.html" target="_blank">Here</a> and if you are looking for some MJN/MHN examples go <a href="polyrhythms-viewer_MHN.html" target="_blank">Here</a>.</li>
       <li>Height are in Hexadecimal and Max Height is f.</li>
       <li>Throws to exclude are separated by "<em>;</em>". It concerns not only heights: i.e you may declare 3x, 4x ...</li>
       <li>Factor Polyrhythms are not simplified. I.E it means that Period of Polyrythms k:kM is computed here as k<sup>2</sup>M.   
